# dynamatic-utils

./: .env  .gitignore  CMakeLists.txt  README.md  analyze.sh  check_affine_opt.py  collect_stats.py  compile.sh  compile_benchmark.sh  compile_circt.sh  compile_dynamatic.sh  compile_legacy_dynamatic.sh  compile_llvm.sh  compile_mlir.sh  compile_new_dynamatic.sh  compile_old_dynamatic.sh  dynamatic_to_dot.sh  gather_graphs.py  runner.sh  setup_legacy_dynamatic.sh  setup_python.sh  utils.sh  visualizer.py
LLVMIRStats/: CMakeLists.txt  LLVMIRStats.cpp
MLIRStats/: CMakeLists.txt  MLIRStatsAnalysis.cpp  MLIRStatsPass.cpp
MLIRStats/tools-opt/: CMakeLists.txt  tools-opt.cpp
benchmarks/FPL22/bicg/src/: bicg.cpp  bicg.h
benchmarks/FPL22/binary_search/src/: binary_search.cpp  binary_search.h
benchmarks/FPL22/fir/src/: fir.cpp  fir.h
benchmarks/FPL22/gaussian/src/: gaussian.cpp  gaussian.h
benchmarks/FPL22/gcd/src/: gcd.cpp  gcd.h
benchmarks/FPL22/matvec/src/: matvec.cpp  matvec.h
benchmarks/FPL22/polynMult/src/: polynMult.cpp  polynMult.h
benchmarks/FPL22/sobel/src/: sobel.cpp  sobel.h  test_input.txt
benchmarks/FPL22/stencil_2d/src/: stencil_2d.cpp  stencil_2d.h
compile/: bridge_legacy.sh  circt.sh  dynamatic.sh  legacy_dynamatic.sh
include/: IRStats.h  MLIRStatsAnalysis.h  MLIRStatsPass.h
include/LLVM/: LLVMStatisticsPass.h
include/LLVMIRStats/: LLVMIRStats.h
include/MLIR/: MLIRStatisticsPass.h
include/MLIRGlobals/: MLIRGlobalsPass.h
include/MLIRStats/: MLIRStatsAnalysis.h
ir-comp/: benchmark_names.txt  compile_benchmark.sh  compile_llvm.sh  get_benchmarks.sh
lib/: CMakeLists.txt  IRStats.cpp
lib/LLVM/: CMakeLists.txt  LLVMStatisticsPass.cpp
lib/LLVMIRStats/: CMakeLists.txt  LLVMIRStats.cpp  LLVMStatisticsPass.cpp
lib/MLIR/: CMakeLists.txt  MLIRStatisticsPass.cpp
lib/MLIRGlobals/: CMakeLists.txt  MLIRGlobalsPass.cpp
lib/MLIRStats/: CMakeLists.txt  MLIRStatsAnalysis.cpp  MLIRStatsPass.cpp
tools/: CMakeLists.txt
tools/mlir-analyze/: CMakeLists.txt  mlir-analyze.cpp
viz/: dot_parser.py  figures.py  parser.py  utils.py  visualizer.py  vivado.py
wlf2mp4/: wlf2mp4.py
